<resources>
    <string name="app_name">e-commerce</string>
    <string name="good_to_see_you_back">Good to see you back! ♥︎</string>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="login_background">login background</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="email_btn">Email</string>
    <string name="sms_btn">SMS</string>
    <string name="send_again">Send Again</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="how_you_would_like_to_restore_your_password">How you would like to restore your password?</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="lorem_ipsum_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non consectetur turpis. Morbi eu eleifend lacus.</string>
    <string name="BASE_URL">http://10.0.2.2:3000/api/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="my_activity">My Activity</string>
    <string name="wishlist">Wishlist</string>
    <string name="recently_viewed">Recently viewed</string>
    <string name="announcement">Announcement</string>
    <string name="lorem_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit luctus libero ac vulputate.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur.</string>
    <string name="most_popular">Most Popular</string>
    <string name="see_all">See All</string>
</resources>