<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greybubble" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bluebubble" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginBottom="60sp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="#0B0B0B"
            android:textSize="@dimen/font_title"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/dottedCircle"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/rounded_circle_camera">

            <ImageView
                android:id="@+id/cameraIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/camera_icon" />

        </FrameLayout>
        <EditText
            android:id="@+id/passwordText2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textInput_height"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_login_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="#D2D2D2"
            android:textSize="@dimen/textInput" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/textInput_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_login_background">

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/toggleIcon"
                android:background="@drawable/edit_text_login_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="#D2D2D2"
                android:textSize="@dimen/textInput" />

            <ImageView
                android:id="@+id/toggleIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/toggle_password_visibility"
                android:src="@drawable/eye_close" />
        </RelativeLayout>

        <EditText
            android:id="@+id/mobileNoText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textInput_height"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_login_background"
            android:hint="Your number"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="#D2D2D2"
            android:textSize="@dimen/textInput" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/primary_button_background"
            android:backgroundTint="@null"
            android:fontFamily="@font/nunito_sans_light"
            android:padding="12dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/primary_button" />

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_light"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="?attr/android:text"
            android:textSize="@dimen/cancel_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>