<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.passwordrecovery.password_recovery">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recoverygrey" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/recoveryblue" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="150sp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/circleView"
                android:layout_width="@dimen/launch_cart_cirle"
                android:layout_height="@dimen/launch_cart_cirle"
                android:background="@drawable/lets_get_started_ovalshape"
                android:elevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="@dimen/profile_image_width"
                android:layout_height="@dimen/profile_image_height"
                android:elevation="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/circleView"
                app:layout_constraintEnd_toEndOf="@+id/circleView"
                app:layout_constraintStart_toStartOf="@+id/circleView"
                app:layout_constraintTop_toTopOf="@+id/circleView"
                app:srcCompat="@drawable/man_user_circle_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:text="Password Recovery"
            android:textColor="?attr/android:text"
            android:textSize="@dimen/font_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito_sans"
            android:text="How you would like to restore your password?"
            android:textAlignment="center"
            android:textColor="?attr/android:text"
            android:textSize="@dimen/like_to_restore_password_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="@dimen/radio_btn_width"
            android:layout_height="@dimen/radio_btn_height"
            android:layout_marginTop="15dp"
            android:background="@drawable/recovery_round_blue_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@drawable/custom_radio_button"
                android:fontFamily="@font/raleway_bold"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:text="@string/email_btn"
                android:textSize="@dimen/radio_btn_txt_size" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="@dimen/radio_btn_width"
            android:layout_height="@dimen/radio_btn_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/recovery_round_pink_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@drawable/custom_radio_button"
                android:fontFamily="@font/raleway_bold"
                android:layout_marginRight="5dp"
                android:layoutDirection="rtl"
                android:gravity="center"
                android:text="@string/email_btn"
                android:textSize="@dimen/radio_btn_txt_size" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/primary_button_background"
            android:backgroundTint="@null"
            android:fontFamily="@font/nunito_sans_light"
            android:padding="12dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/primary_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <TextView
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nunito_sans_light"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="?attr/android:text"
            android:textSize="@dimen/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>